cards are flexing correctly, Top text is aligning center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  margin: 0;
   color: #133813;
   background-color: #7baa7a;
 }
@@ -13,14 +14,16 @@ main {
 
 .mainHeader,
 footer,
+/* can we make the description text wrap and center? */
 .description {
   display: flex;
+  text-align: center;
   justify-content: center;
   padding: 10px;
 }
 
 .card {
-  flex: 1 0 300px;
+  flex: 1 1 30%;
   padding: 10px;
   margin: 15px;
   border: 3px dashed #b8d1b7;
@@ -36,7 +39,39 @@ footer,
 }
 
 .codeBlock {
+  display: flex;
+  align-items: flex-start;
   background-color: #4a734a;
   color: #b8d1b7;
   border-radius: 10px;
+}
+
+.select {
+  -moz-user-select: all;
+  -webkit-user-select: all;
+  -ms-user-select: all;
+  user-select: all;
+}
+
+pre {
+  display: flex;
+  align-items: center;
+  tab-size: 4;
+  white-space: pre-wrap;
+  overflow: auto;
+}
+
+/* hover changes to border */
+
+/* for screens between 768px and 992px */
+@media screen and (max-width: 992px) {
+  .card {
+    flex: 1 1 40%;
+  }
+}
+/* for mobile devices (anything under 768px) */
+@media screen and (max-width: 768px) {
+  .card {
+    flex: 1 1 90%;
+  }
 }
